--- a/unflex.css
+++ b/unflex.css
@@ -1,4 +1,4 @@
 @media (min-width: 640px) {
   .row { display: flex; flex-flow: row wrap;}
-  .col { flex-grow: 1 }
+  .col { flex-grow: 1; flex-basis: 0; }
 }
