--- a/unflex.css
+++ b/unflex.css
@@ -1,5 +1,5 @@
 @media (min-width: 540px) {
-	.row { display: flex; flex-flow: row wrap; }
+	.row { display: flex; flex-flow: row wrap }
 	.col { flex: 1 1 0% }
 	.-fixed-width { flex-grow: 0; flex-basis: auto }
 }
